# jmsd_tpc_poco_cpp

./: .gitmodules  CMakeLists.txt  README.md
_tpc_cmake_settings/: tpc-poco-cppunit-set-compiler-settings.cmake  tpc-poco-foundation-set-compiler-settings.cmake  tpc-poco-json-set-compiler-settings.cmake  tpc-poco-seven-zip-set-compiler-settings.cmake  tpc-poco-util-set-compiler-settings.cmake  tpc-poco-xml-set-compiler-settings.cmake  tpc-poco-zip-set-compiler-settings.cmake
_tpc_cmake_settings/compiler-settings/: tpc-poco-cppunit-set-linux-compiler-settings.cmake  tpc-poco-cppunit-set-windows-compiler-settings.cmake  tpc-poco-foundation-set-linux-compiler-settings.cmake  tpc-poco-foundation-set-windows-compiler-settings.cmake  tpc-poco-json-set-linux-compiler-settings.cmake  tpc-poco-json-set-windows-compiler-settings.cmake  tpc-poco-seven-zip-set-linux-compiler-settings.cmake  tpc-poco-seven-zip-set-windows-compiler-settings.cmake  tpc-poco-util-set-linux-compiler-settings.cmake  tpc-poco-util-set-windows-compiler-settings.cmake  tpc-poco-xml-set-linux-compiler-settings.cmake  tpc-poco-xml-set-windows-compiler-settings.cmake  tpc-poco-zip-set-linux-compiler-settings.cmake  tpc-poco-zip-set-windows-compiler-settings.cmake
_tpc_cmake_settings/macroses/: tpc-poco-functions-and-macroses.cmake  tpc-poco-functions.cmake
tpc_derived_lib/: CMakeLists.txt
tpc_poco_cppunit/: CMakeLists.txt
tpc_poco_foundation/: CMakeLists.txt
tpc_poco_json/: CMakeLists.txt
tpc_poco_seven_zip/: CMakeLists.txt
tpc_poco_util/: CMakeLists.txt
tpc_poco_xml/: CMakeLists.txt
tpc_poco_zip/: CMakeLists.txt
